py_util: create py_util C++ files
py_util contains py_assert() a function to handle python errors in C++ world.

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -83,7 +83,8 @@ step_mod = py3_inst.extension_module('step',
         'resolve_function_pointer.cpp',
         'svf_analyses.cpp',
         'svf_transformation.cpp',
-        'value_analyzer.cpp') + test_sources,
+        'value_analyzer.cpp',
+        'py_util.cpp') + test_sources,
   gnu_symbol_visibility: 'default',
   override_options: 'b_lundef=false',
   cpp_pch: 'pch/steps_pch.h',
