visualization: implement C++ wrapper for Tracer API
currently support for:
- get_entity()
- entity_on_node()
- entity_is_looking_at()
- go_to_node()

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -43,7 +43,8 @@ step_pyx_gen = custom_target('step_pyx',
                  'cstep.pxd',
                  'replace_syscalls_create.pxd',
                  'value_analyzer.pxd',
-                 'value_analyzer.pxi') + test_pxd + common_cython_files],
+                 'value_analyzer.pxi',
+                 'tracer_api.pxi') + test_pxd + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '-I', step_dir, '@INPUT0@', '-o', '@OUTPUT0@'] + cython_flags,
   depend_files: [conf_file],
 )
