--- a/appl/AUTOSAR/multicore/trampoline/meson.build.template
+++ b/appl/AUTOSAR/multicore/trampoline/meson.build.template
@@ -31,6 +31,7 @@ else
   sys_timings = disabler()
 endif
 app += {'sys_timings': sys_timings}
+app += {'testsuit_extra': ['trampoline']}
 
 autosar_targets += [app]
 
