--- a/appl/POSIX/meson.build
+++ b/appl/POSIX/meson.build
@@ -5,7 +5,7 @@ posix_make_command = ['make', '-C', posix_src_dir,
                       'BUILD_ROOT=' + meson.build_root(),
                       'BUILD_DIR=' + posix_output_dir, 
                       'ARA_LINK=' + ara_link.full_path(),
-                      #'CLANG=' + clang.full_path(), # clang needs to be available via PATH. WLLVM requires that.
+                      'CLANG=' + clang.full_path(),
                       'LLVM_DIS=' + llvm_dis.full_path(),
                       'LLVM_LLC=' + llc.full_path(),
                       'LLVM_OPT=' + llvm_opt.full_path(),
