--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,12 +1,12 @@
-from ubuntu:focal
+from ubuntu:jammy
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/Berlin
 
 # z3 bringt kein pkg-config mit, aber cmake von svf benötigt es.
 COPY z3.pc /usr/share/pkgconfig/z3.pc
 RUN apt update\
-	&& apt-get install -y pkg-config clang-10 llvm-10-dev llvm-11-dev clang-11 llvm-12-dev clang-12 python3 python3-pip tmux build-essential ninja-build git binutils-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib bash-completion gdb-multiarch z3
-RUN echo "deb http://downloads.skewed.de/apt focal main" > /etc/apt/sources.list.d/graph_tool.list\
+	&& apt-get install -y pkg-config clang-12 llvm-12-dev clang-14 llvm-14-dev python3 python3-pip tmux build-essential ninja-build git binutils-arm-none-eabi libnewlib-arm-none-eabi libstdc++-arm-none-eabi-newlib bash-completion gdb-multiarch z3
+RUN echo "deb http://downloads.skewed.de/apt jammy main" > /etc/apt/sources.list.d/graph_tool.list\
 	&& apt-key adv --keyserver keys.openpgp.org --recv-key 612DEFB798507F25\
 	&& apt-get update \
 	&& apt-get install -y python3-graph-tool
