bestof generated benchmarks: We have no more letters

--- a/appl/AUTOSAR/multicore/dynamic/meson.build
+++ b/appl/AUTOSAR/multicore/dynamic/meson.build
@@ -44,3 +44,5 @@ step_data = custom_target(full_name + '.multisse.with_timing.stepdata.json',
                          )
 
 subdir('gen')
+
+subdir('bestof')
