bestof generated benchmarks: invalid edge descriptor
ninja
appl/AUTOSAR/multicore/dynamic/bestof/synthetic_03C_01L_2U_15T_90A_90S_05E__0030.multisse.with_timing.stepdata.json

--- a/appl/AUTOSAR/multicore/dynamic/bestof/meson.build
+++ b/appl/AUTOSAR/multicore/dynamic/bestof/meson.build
@@ -48,6 +48,50 @@ synthetic_03C_01L_2U_15T_90A_90S_05E__0039_with_stepdata = custom_target('synthe
 with_jsons +=synthetic_03C_01L_2U_15T_90A_90S_05E__0039_with_stepdata
 all_jsons += synthetic_03C_01L_2U_15T_90A_90S_05E__0039_with_stepdata
 
+synthetic_03C_01L_2U_15T_90A_90S_05E__0030_cc = custom_target('synthetic_03C_01L_2U_15T_90A_90S_05E__0030_cc',
+  output: ['synthetic_03C_01L_2U_15T_90A_90S_05E__0030.cc', 'synthetic_03C_01L_2U_15T_90A_90S_05E__0030.oil.json'],
+  command: [benchmark_gen, '--seed', '30', '--system', '@OUTPUT0@',
+             '--oil', '@OUTPUT1@', '--cores', '3', '--locks', '1',
+             '--lock-users', '2', '--subtasks', '15',
+             '--at-local', '90', '--se-local', '90',
+             '--events', '5']
+  )
+
+synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll = custom_target('synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll',
+  input: synthetic_03C_01L_2U_15T_90A_90S_05E__0030_cc[0],
+  depfile: 'synthetic_03C_01L_2U_15T_90A_90S_05E__0030.cc.dep',
+  output: 'synthetic_03C_01L_2U_15T_90A_90S_05E__0030.cc.ll',
+  command: clang_cpp + libs_includes + ir_flags + clang_flags)
+ir_files += synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll
+
+synthetic_03C_01L_2U_15T_90A_90S_05E__0030_no_stepdata = custom_target('synthetic_03C_01L_2U_15T_90A_90S_05E__0030_no_stepdata',
+  input: [ara_py, synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll],
+  output: 'synthetic_03C_01L_2U_15T_90A_90S_05E__0030.multisse.no_timing.stepdata.json',
+  command: [py3_inst, ara_py, synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll,
+  '--oilfile', synthetic_03C_01L_2U_15T_90A_90S_05E__0030_cc[1],
+  '--step-settings', no_timing_settings,
+  '--timings', 'BB',
+  '--os', 'AUTOSAR',
+  '--step-data', '@OUTPUT0@'],
+)
+
+no_jsons +=synthetic_03C_01L_2U_15T_90A_90S_05E__0030_no_stepdata
+all_jsons += synthetic_03C_01L_2U_15T_90A_90S_05E__0030_no_stepdata
+
+synthetic_03C_01L_2U_15T_90A_90S_05E__0030_with_stepdata = custom_target('synthetic_03C_01L_2U_15T_90A_90S_05E__0030_with_stepdata',
+  input: [ara_py, synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll],
+  output: 'synthetic_03C_01L_2U_15T_90A_90S_05E__0030.multisse.with_timing.stepdata.json',
+  command: [py3_inst, ara_py, synthetic_03C_01L_2U_15T_90A_90S_05E__0030_ll,
+  '--oilfile', synthetic_03C_01L_2U_15T_90A_90S_05E__0030_cc[1],
+  '--step-settings', with_timing_settings,
+  '--timings', 'BB',
+  '--os', 'AUTOSAR',
+  '--step-data', '@OUTPUT0@'],
+)
+
+with_jsons +=synthetic_03C_01L_2U_15T_90A_90S_05E__0030_with_stepdata
+all_jsons += synthetic_03C_01L_2U_15T_90A_90S_05E__0030_with_stepdata
+
 
 
 
