MultiSSEExperiment with timeouts

--- a/tools/meson.build
+++ b/tools/meson.build
@@ -7,6 +7,7 @@ qemu_test_runner = files('qemu_test_runner.py')
 validate_generator_runner = files('validate_generator_runner.py')
 dump_cmds = files('dump_cmds.py')
 gcc_version = files('gcc_version.py') # drop, when https://github.com/mesonbuild/meson/issues/7166 is resolved
+ctimeout = files('ctimeout')
 
 if get_option('arch') == 'arm'
   qemu_cmd = files('qemu_stm32.sh')
